Feature/java 11 upgrade (#41)
* Upgrade support for Java 11

* Upgrade support for Java 11

* Upgrade support for Java 11

* Upgrade support for Java 11

* Upgrade support for Java 11

* Upgrade support for Java 11

* Upgrade support for Java 11

* Upgrade support for Java 11

* Upgrade support for Java 11

* Upgrade support for Java 11

* [maven-release-plugin] prepare release 3.0.1

* [maven-release-plugin] prepare for next development iteration

---------

Co-authored-by: Anthony Lombardo <alombardo@rccl.com>